<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteColor"
    tools:context=".activities.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        app:elevation="0dp"
        android:theme="@style/ThemeOverlay.MaterialComponents.Light"
        android:background="@color/whiteColor"
        android:fitsSystemWindows="true"
        android:animateLayoutChanges="false">

        <LinearLayout
            android:id="@+id/lin_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="8dp"
            android:visibility="visible"
            app:layout_scrollFlags="scroll|enterAlways">

            <TextView
                android:id="@+id/tv_greet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/greet"
                android:textColor="@color/textAndIconColor"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/img_more"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:contentDescription="@string/img_more_desc"
                android:src="@drawable/ic_list_view" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/con_searchbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/stroke_and_corner"
            android:visibility="visible"
            app:layout_scrollFlags="scroll|enterAlways">

            <ImageView
                android:id="@+id/img_search"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:contentDescription="@string/img_search_desc"
                android:src="@drawable/ic_search"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <EditText
                android:id="@+id/edt_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="@null"
                android:hint="@string/search_hint"
                android:imeOptions="actionSearch"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="8dp"
                android:singleLine="true"
                android:textSize="16sp"
                android:textColor="@color/textAndIconColor"
                android:textColorHint="@color/hintAndIconLowContrastColor"
                android:textColorHighlight="@color/textHighlightColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/img_mic"
                app:layout_constraintStart_toEndOf="@id/img_search"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

            <ImageView
                android:id="@+id/img_mic"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="14dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:contentDescription="@string/img_voice_desc"
                android:src="@drawable/ic_mic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/lin_multi_select_toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:gravity="center_vertical"
            android:visibility="gone"
            android:background="@color/whiteColor"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/img_select_all"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/select_all_desc"
                android:src="@drawable/ic_select_all"
                android:layout_marginEnd="12dp"
                app:tint="@color/textAndIconColor" />

            <TextView
                android:id="@+id/tv_selected_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="0 selected"
                android:textSize="16sp"
                android:textColor="@color/textAndIconColor"
                android:layout_weight="1"
                tools:ignore="HardcodedText" />

            <ImageView
                android:id="@+id/img_pin"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_pin" />

            <ImageView
                android:id="@+id/img_share"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:visibility="gone"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_share"/>

            <ImageView
                android:id="@+id/img_delete"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/delete"
                android:src="@drawable/ic_delete" />
        </LinearLayout>

        <View
            android:id="@+id/view_hor_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/strokeAndBorderColor"
            android:visibility="gone"
            tools:visibility="visible"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notes_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingStart="10dp"
        android:paddingTop="8dp"
        android:paddingEnd="20dp"
        android:paddingBottom="8dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <LinearLayout
        android:id="@+id/lin_empty_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="gone"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/img_empty_state"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:contentDescription="@string/empty_state_image_desc"
            android:src="@drawable/notes_empty_state" />

        <TextView
            android:id="@+id/tv_empty_state_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:textColor="@color/textAndIconColor"
            android:text="@string/empty_notes_indication" />

   </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="26dp"
        android:clickable="true"
        android:contentDescription="@string/fab_add_desc"
        android:focusable="true"
        app:srcCompat="@drawable/ic_add"
        app:backgroundTint="@color/whiteColor" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>


